fixed resourcell overflow, made listview corner transparent, made window resizing restrictive with min width and height - version 1.1.9 dev stage7

--- a/Launcher/src/main/resources/com/laeben/corelauncher/style/cells/resource.css
+++ b/Launcher/src/main/resources/com/laeben/corelauncher/style/cells/resource.css
@@ -50,7 +50,12 @@
     -fx-font-size: 10pt;
 }
 
-#lblCategory{
+.text-area{
+    -fx-min-width: 1!important;
+    -fx-pref-width: 50px!important;
+}
+
+#txtCategory{
     -fx-font-size: 10pt;
     -fx-padding: 0 0 0 10px;
 }
